更改异常查询的页面结构

--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/Index.cshtml
@@ -185,16 +185,16 @@
             ]
         ];
     </script>
-    <div id="dlg" class="easyui-dialog" style="width:800px;height:400px;padding:10px 20px"
+    <div id="dlg" class="easyui-dialog" style="width:850px;height:400px;padding:10px 20px"
          closed="true" buttons="#dlg-buttons">
         <form id="fm" method="post" novalidate>
             <div>
                 <span class="fitem">
-                    <label>部&nbsp;&nbsp;&nbsp;&nbsp;门:</label>
+                    <label>部&nbsp;&nbsp;门:</label>
                     <input name="Department" class="easyui-textbox" editable="false">
                 </span>
                 <span class="fitem">
-                    <label>工&nbsp;&nbsp;&nbsp;&nbsp;厂:</label>
+                    <label>工&nbsp;&nbsp;厂:</label>
                     <input name="Factory" class="easyui-textbox" editable="false">
                 </span>
                 <span class="fitem">
@@ -205,7 +205,7 @@
             <p></p>
             <div>
                 <span class="fitem">
-                    <label>类&nbsp;&nbsp;&nbsp;&nbsp;型:</label>
+                    <label>类&nbsp;&nbsp;型:</label>
                     <input name="Type" class="easyui-textbox" editable="false">
                 </span>
 
@@ -225,7 +225,7 @@
                     <input id="dlg_ProblemTime" name="ProblemTime" class="easyui-textbox" editable="false">
                 </span>
                 <span class="fitem">
-                    <label>解&nbsp;决&nbsp;人:</label>
+                    <label>解决人&nbsp;:</label>
                     <input name="Workers" class="easyui-textbox" editable="false">
                 </span>
                 <span class="fitem">
@@ -236,7 +236,7 @@
             <p></p>
             <div>
                 <span class="fitem">
-                    <label>细&nbsp;&nbsp;&nbsp;&nbsp;节:</label>
+                    <label>细&nbsp;&nbsp;节:</label>
                     <textarea name="Detail" class="textarea easyui-validatebox" rows=5></textarea>
                 </span>
                 <span class="fitem">
@@ -251,11 +251,11 @@
             <p></p>
             <div>
                 <span class="fitem">
-                    <label>建&nbsp;&nbsp;&nbsp;&nbsp;议:</label>
+                    <label>建&nbsp;&nbsp;议:</label>
                     <textarea name="Suggestion" class="textarea easyui-validatebox" rows=5></textarea>
                 </span>
                 <span class="fitem">
-                    <label>备&nbsp;&nbsp;&nbsp;&nbsp;注:</label>
+                    <label>备&nbsp;&nbsp;注:</label>
                     <textarea name="Remark" class="textarea easyui-validatebox" rows=5></textarea>
                 </span>
             </div>
