--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Factory/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Factory/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.AddUrl = Url.Action("Add");
     ViewBag.EditUrl = Url.Action("Edit");
     ViewBag.DeleteUrl = Url.Action("Delete");
-   
+    ViewBag.CreateExcel = Url.Action("CreateExcel");
 }
 @section customScript
 {
