--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/Index.cshtml
@@ -10,6 +10,7 @@
     ViewBag.FactoryList = Url.Action("FactoryList");
     ViewBag.ProblemSourceList = Url.Action("ProblemSourceList");
     ViewBag.ProblemTypeList = Url.Action("ProblemTypeList");
+    ViewBag.CreateExcel = Url.Action("CreateExcel");
 }
 @section customScript
 {
