--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Cpk/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Cpk/Index.cshtml
@@ -6,34 +6,108 @@
     ViewBag.AddUrl = Url.Action("Add");
     ViewBag.EditUrl = Url.Action("Edit");
     ViewBag.DeleteUrl = Url.Action("Delete");
-    ViewBag.ExcelUrl = Url.Action("CreateExcel");
- 
+    ViewBag.CreateExcel = Url.Action("CreateExcel");
+    ViewBag.DownLoadZip = Url.Action("DownLoadZip");
 }
 @section customScript
 {
     <script type="text/javascript">
         var selectTreeData = null;
-        columns = [[
-            { field: "PlatForm", title: "平台", width: 180, sortable: true },
-            { field: "ProjectName", title: "项目", width: 50, sortable: true },
-            { field: "Opcode", title: "工序", width: 50, sortable: true },
-            { field: "Ip", title: "Ip", width: 100, sortable: true },
-            { field: "Sn", title: "Sn", width: 100, sortable: true },
-            { field: "TestTime", title: "测试时间", width: 50, sortable: true },
-            { field: "Result", title: "测试结果", width: 50, sortable: true },
-            { field: "Wgsn", title: "Wgsn", width: 50, sortable: true },
-              { field: "Tch", title: "Tch", width: 50, sortable: true },
-            { field: "Pcl", title: "Pcl", width: 100, sortable: true },
-            { field: "TestVal", title: "TestVal", width: 80, sortable: true },
-            { field: "MinVal", title: "MinVal", width: 50, sortable: true },
-            { field: "MaxVal", title: "MaxVal", width: 50, sortable: true },
-            { field: "ReadLogDate", title: "读取时间", width: 150, sortable: true, formatter: function (value) { return $.Mes.tools.formatDate(value); } },
-            { field: "TestDate", title: "TestDate", width: 150, sortable: true },
-            { field: "LogFileName", title: "文件名", width: 150, sortable: true },
-             { field: "CreatedTime", title: "创建时间", width: 150, sortable: true, formatter: function (value) { return $.Mes.tools.formatDate(value); } }
-            
-        ]];
+        enableFilterData = false;
+        toolbarData = "#toolbarData";
+        var exportExcel = function () {
+            var platForm = $('#PlatForm').textbox('getValue');
+            var projectName = $('#ProjectName').textbox('getValue');
+            var pcl = $('#Pcl').textbox('getValue');
+            var opcode = $('#Opcode').textbox('getValue');
+            var tch = $('#Tch').textbox('getValue');
+            var testDate = $('#TestDate').textbox('getValue');
+            var toolbarfilterRules = [];
+            if (platForm != "")
+                toolbarfilterRules.push({ "field": "PlatForm", "op": "equal", "value": platForm });
+            if (projectName != "")
+                toolbarfilterRules.push({ "field": "ProjectName", "op": "equal", "value": projectName });
+            if (pcl != "")
+                toolbarfilterRules.push({ "field": "Pcl", "op": "equal", "value": pcl });
+            if (opcode != "")
+                toolbarfilterRules.push({ "field": "Opcode", "op": "equal", "value": opcode });
+            if (tch != "")
+                toolbarfilterRules.push({ "field": "Tch", "op": "equal", "value": tch });
+            if (testDate != "")
+                toolbarfilterRules.push({ "field": "TestDate", "op": "equal", "value": testDate });
+            var group = new $.Mes.filter.group();
+            group.Rules = toolbarfilterRules;
+            window.open("@ViewBag.CreateExcel?where=" + JSON.stringify(group));
+        };
+        var DownLoadZip = function (zipFileName) {
+            window.open("@ViewBag.DownLoadZip?zipFileName=" + zipFileName);
+        }
+        var Query = function () {
+            var platForm = $('#PlatForm').textbox('getValue');
+            var projectName = $('#ProjectName').textbox('getValue');
+            var pcl = $('#Pcl').textbox('getValue');
+            var opcode = $('#Opcode').textbox('getValue');
+            var tch = $('#Tch').textbox('getValue');
+            var toolbarfilterRules = [];
+            if (platForm != "")
+                toolbarfilterRules.push({ "field": "PlatForm", "op": "equal", "value": platForm });
+            if (projectName != "")
+                toolbarfilterRules.push({ "field": "ProjectName", "op": "equal", "value": projectName });
+            if (pcl != "")
+                toolbarfilterRules.push({ "field": "Pcl", "op": "equal", "value": pcl });
+            if (opcode != "")
+                toolbarfilterRules.push({ "field": "Opcode", "op": "equal", "value": opcode });
+            if (tch != "")
+                toolbarfilterRules.push({ "field": "Tch", "op": "equal", "value": tch });
+            $('#grid-@ViewBag.GridId').datagrid('load', {
+                filterRules: toolbarfilterRules
+            });
+        }
+        columns = [
+            [
+                { field: "PlatForm", title: "平台", width: 180, sortable: true },
+                { field: "ProjectName", title: "项目", width: 100, sortable: true },
+                { field: "Opcode", title: "工序", width: 50, sortable: true },
+                { field: "Ip", title: "Ip", width: 100, sortable: true },
+                { field: "Sn", title: "Sn", width: 100, sortable: true },
+                { field: "TestTime", title: "测试时间", width: 50, sortable: true },
+                { field: "Result", title: "测试结果", width: 50, sortable: true },
+                { field: "Wgsn", title: "Wgsn", width: 50, sortable: true },
+                { field: "Tch", title: "Tch", width: 50, sortable: true },
+                { field: "Pcl", title: "Pcl", width: 100, sortable: true },
+                { field: "TestVal", title: "TestVal", width: 80, sortable: true },
+                { field: "MinVal", title: "MinVal", width: 50, sortable: true },
+                { field: "MaxVal", title: "MaxVal", width: 50, sortable: true },
+              //  { field: "ReadLogDate", title: "读取时间", width: 150, sortable: true, formatter: function (value) { return $.Mes.tools.formatDate(value); } },
+                { field: "TestDate", title: "TestDate", width: 150, sortable: true },
+                { field: "LogFileName", title: "文件名", width: 150, sortable: true },
+                {
+                    field: "ZipFileName", title: "压缩文件名", width: 150, sortable: true,
+                    formatter: function (value, rec) {
+                        var btn = '<a  onclick="DownLoadZip(\'' + rec.ZipFileName+".zip" + '\')" href="javascript:void(0)">' + rec.ZipFileName+".zip" + '</a>';
+                        return btn;
+                    }
+                }
+
+              //  { field: "CreatedTime", title: "创建时间", width: 150, sortable: true, formatter: function (value) { return $.Mes.tools.formatDate(value); } }
+            ]
+        ];
 
     </script>
+    <div id="toolbarData" style="padding:5px;height:auto">
+        <div style="margin-bottom:5px">
+            <a href="#" class="easyui-linkbutton" iconCls="icon-export" plain="true" onclick="javascript: exportExcel();">导出</a>
+        </div>
+        <div>
+            平台: <input id="PlatForm" class="easyui-textbox" style="width: 80px">
+            项目: <input id="ProjectName" class="easyui-textbox" style="width: 80px">
+            Pcl:  <input id="Pcl" class="easyui-textbox" style="width: 80px">
+            工序: <input id="Opcode" class="easyui-textbox" style="width:80px">
+            Tch: <input id="Tch" class="easyui-textbox" style="width: 80px">
+            TestDate:  <input id="TestDate" class="easyui-textbox" style="width:80px">
+            <a href="#" class="easyui-linkbutton" iconCls="icon-search" onclick="javascript: Query();">查询</a>
+        </div>
+    </div>
 }
+
 
